--- a/app.json
+++ b/app.json
@@ -1,33 +1,29 @@
 {
   "expo": {
-    "name": "meteo",
-    "slug": "meteo",
+    "name": "Mario Pizza",
+    "slug": "pizza",
     "version": "1.0.0",
+    "owner": "piot",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/images/icon.png",
+    "userInterfaceStyle": "dark",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#3b438b"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#3b438b"
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
