--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteo",
+  "name": "mario pizza",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.6",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "@expo/webpack-config": "^0.17.3",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "axios": "~1.1.3",
+    "date-fns": "^2.29.3",
+    "expo": "~46.0.0",
+    "expo-constants": "~13.2.4",
+    "expo-location": "~14.3.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
