--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "expo-location": "~14.3.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.9",
     "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^4.12.5",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "typescript": "^4.6.3"
   },
