--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "@expo/webpack-config": "^0.17.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
-    "@types/react": "~18.0.0",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
     "axios": "~1.1.3",
     "date-fns": "^2.29.3",
-    "expo": "~46.0.0",
-    "expo-constants": "~13.2.4",
-    "expo-location": "~14.3.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.9",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-location": "~16.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^4.12.5",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
