--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -23,6 +25,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#3b438b"
+      }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d3c33330-3de9-4afa-9d03-63e9f40243f2"
       }
     }
   }
